pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidImportUri.pkl
import "file:///foo^bar.pkl" as _foo

foo = _foo
